# VidSum_GNN

./: .gitignore  BACKEND_ANALYSIS.md  BINARY_CLASSIFICATION_FIXES.md  BINARY_CLASSIFICATION_GUIDE.md  COMPLETION_CHECKLIST.md  DASHBOARD_UPDATE_SUMMARY.md  DATASET_DOWNLOAD_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  EXECUTION_GUIDE.md  FEATURE_EXTRACTION_REFACTOR.md  FINAL_CHECKLIST.md  FINAL_REPORT.py  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.py  INDEX.md  INTEGRATION_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  SHOTFEATURES_SCHEMA.md  START_HERE.md  START_YOUTUBE_DATASET.md  TESTING_AND_DEPLOYMENT.md  UGC_ANALYSIS.md  YOUTUBE_DATASET_INDEX.md  YOUTUBE_DATASET_README.md  build.bat  build.sh  docker-compose.yml  download_playlists.py  implementation_plan.md.resolved  optimize_database.py  optimize_dataset.py  package-lock.json  package.json  pyproject.toml  rebuild_dataset_jsons.py  requirements-local.txt  (+12 more)
MD_Files/: API_DOCUMENTATION.md  BACKEND_ANALYSIS.md  BACKEND_FORMAT_OPTIMIZATION.md  CODE_ANALYSIS_AND_REFACTORING.md  DATA_FLOW_DIAGRAM.md  DEPLOYMENT_CHECKLIST.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  HISTORY_FEATURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPORTANT_SHOTS_FEATURE.md  INTEGRATION_GUIDE.md  LOCAL_SETUP_GUIDE.md  MODEL_INTEGRATION_GUIDE.md  MODEL_INTEGRATION_README.md  MULTILINGUAL_ASR_LLM_ROADMAP.md  NEXT_STEPS_IMPLEMENTATION.md  PROJECT_COMPLETION.md  PROJECT_FLOWCHART.md  PROJECT_READY.md  QUICKSTART.md  QUICKSTART_GUIDE.md  README.md  SIMPLE_ARCHITECTURE.md  SIMPLE_DATA_FLOW.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_REFERENCE.md  TESTING_GUIDE.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
model/: binary_validation_metrics.json  train.ipynb
vidsum_gnn/: dataset_loaders.py  model_service.py
vidsum_gnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vidsum_gnn/api/: main.py  routes.py  tasks.py
vidsum_gnn/core/: config.py
vidsum_gnn/db/: client.py  init_timescaledb.sql  models.py  optimization.py
vidsum_gnn/features/: audio.py  handcrafted.py  visual.py
(+34 files in other folders)
