[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidsum_gnn"
version = "0.1.0"
description = "Video Summarization with GNNs"
authors = [
  { name="Morya", email="moryakantha2@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Core dependencies pinned to match Docker base (PyTorch 2.1.0 CUDA 12.1)
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",

    # Match the PyTorch wheels provided by base image - DO NOT UPGRADE
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",

    # Graph neural networks (installs from PyG index; may fall back to CPU wheels)
    "torch-geometric>=2.3.0",

    # Media / Audio processing
    "librosa>=0.10.0",

    # Transformers & NLP - PINNED for PyTorch 2.1.0 compatibility
    "transformers==4.35.2",  # Last version fully compatible with torch 2.1.0
    "sentence-transformers==2.2.2",  # Pinned to avoid pulling newer torch
    "tokenizers<0.15.0",  # Compatible with transformers 4.35.2

    # Database + Async
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",

    # Uploads / utils
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",

    # ML Essentials - compatible with pandas and torch 2.1.0
    "numpy>=1.23.0,<2.0.0",
    "pandas==2.1.2",  # pin to a stable 2.x wheel available for Python 3.10
    "scikit-learn>=1.3.0,<1.4.0",  # Compatible with numpy < 2.0

    # Video decoding (GPU/CPU hybrid)
    "decord>=0.6.0",

    # Config management
    "pydantic-settings>=2.1.0",

    # Backend TTS (non-browser read aloud)
    "edge-tts>=6.1.12",
    "gTTS>=2.5.1",

    # Optional: Gemini API fallback/override summarizer
    "google-genai>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vidsum_gnn*"]
